err/django-oauth2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_oauth2-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/provider'...
Listing './lib/python3.5/site-packages/provider/compat'...
Compiling './lib/python3.5/site-packages/provider/forms.py'...
***   File "./lib/python3.5/site-packages/provider/forms.py", line 54
    except OAuthValidationError, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provider/oauth2'...
Listing './lib/python3.5/site-packages/provider/oauth2/fixtures'...
Listing './lib/python3.5/site-packages/provider/oauth2/migrations'...
Listing './lib/python3.5/site-packages/provider/oauth2/south_migrations'...
Listing './lib/python3.5/site-packages/provider/templates'...
Listing './lib/python3.5/site-packages/provider/templates/provider'...
Listing './lib/python3.5/site-packages/provider/templatetags'...
Listing './lib/python3.5/site-packages/provider/tests'...
Compiling './lib/python3.5/site-packages/provider/views.py'...
***   File "./lib/python3.5/site-packages/provider/views.py", line 613
    except OAuthError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shortuuid'...
Listing './lib/python3.5/site-packages/shortuuid-0.5.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
